# napari-ome-arrow

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-docs.yml  run-tests.yml
.napari-hub/: DESCRIPTION.md
src/napari_ome_arrow/: _reader.py  napari.yaml
tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
tests/data/idr0062A/6001240_labels.zarr/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/0/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/0/c/0/0/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/1/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/10/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/11/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/12/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/13/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/14/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/15/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/16/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/17/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/18/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/19/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/2/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/20/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/21/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/22/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/23/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/3/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/4/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/5/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/6/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/7/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/8/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/0/9/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/1/0/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/1/1/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/1/10/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/1/11/0/: 0
tests/data/idr0062A/6001240_labels.zarr/0/c/1/12/0/: 0
tests/data/idr0062A/6001240_labels.zarr/1/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/2/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/6001240_labels.zarr/: ro-crate-metadata.json
tests/data/idr0062A/6001240_labels.zarr/labels/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/labels/0/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/labels/0/0/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/labels/0/1/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/labels/0/2/: zarr.json
tests/data/idr0062A/6001240_labels.zarr/labels/0/3/: zarr.json
tests/data/nviz-artificial-4d-dataset/: E99_C111_ZS002.tif  E99_C111_ZS003.tif  E99_C111_ZS004.tif  E99_C111_ZS005.tif  E99_C111_ZS006.tif  E99_C111_ZS007.tif  E99_C111_ZS008.tif  E99_C111_ZS009.tif  E99_C111_ZS010.tif  E99_C111_ZS011.tif  E99_C111_ZS013.tif  E99_C111_ZS014.tif  E99_C111_ZS015.tif  E99_C111_ZS016.tif  E99_C111_ZS017.tif  E99_C111_ZS018.tif  E99_C111_ZS019.tif  E99_C111_ZS020.tif  E99_C111_ZS021.tif  E99_C222_ZS002.tif  E99_C222_ZS003.tif  E99_C222_ZS004.tif  E99_C222_ZS005.tif  E99_C222_ZS006.tif  E99_C222_ZS007.tif  E99_C222_ZS008.tif  E99_C222_ZS009.tif  E99_C222_ZS010.tif  E99_C222_ZS011.tif  E99_C222_ZS013.tif  E99_C222_ZS014.tif  E99_C222_ZS015.tif  E99_C222_ZS016.tif  E99_C222_ZS017.tif  E99_C222_ZS018.tif  E99_C222_ZS019.tif  E99_C222_ZS020.tif
tests/data/ome-artificial-5d-datasets/: multi-channel-time-series.ome.tiff  multi-channel-z-series.ome.tiff  multi-channel.ome.tiff  z-series.ome.tiff
(+67 files in other folders)
