[project]
name = "napari-ome-arrow"
dynamic = ["version"]
description = "A Napari plugin for OME-Arrow and OME-Parquet bioimage data"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
  "numpy",
  "magicgui",
  "qtpy>=2.4",
  "scikit-image",
  "ome-arrow>=0.0.2",
]

[project.optional-dependencies]
# Let users choose their Qt backend explicitly:
pyside6 = ["napari[pyside6]", "PySide6>=6.6", "qtpy>=2.4"]
pyqt6   = ["napari[pyqt6]",  "PyQt6>=6.6",  "qtpy>=2.4"]

# If you want a convenience "everything" extra, keep it backend-agnostic:
all = ["napari", "qtpy>=2.4"]

[dependency-groups]
# Use PySide6 universally for development/tests (works on mac/win/linux)
dev = [
  "pytest",
  "pytest-qt>=4.4",
  "napari[pyside6]",
  "PySide6>=6.6",
  "qtpy>=2.4",
]

[project.entry-points."napari.manifest"]
napari-ome-arrow = "napari_ome_arrow:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/wayscience/napari-ome-arrow/issues"
"Documentation" = "https://github.com/wayscience/napari-ome-arrow#README.md"
"Source Code" = "https://github.com/wayscience/napari-ome-arrow"
"User Support" = "https://github.com/wayscience/napari-ome-arrow/issues"

[build-system]
requires = ["setuptools>=42.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_ome_arrow/_version.py"
fallback_version = "0.0.1+nogit"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]
fix = true
